--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "<img width=\"200px\" src=\"https://w0244079.github.io/nscc/nscc-jpeg.jpg\">",
   "main": "index.js",
   "type": "module",
+  "jest": {
+    "transform": {}
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,7 @@
   "dependencies": {
     "better-sqlite3": "^11.6.0",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.9"
